# effecty

./: .gitignore  .gitlab-ci.yml  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  configuration.example.toml  ui-concept-knowledge-inspired.html
.claude/agents/: designer.md  game-designer.md  rust-graphics.md  rust-senior.md  rust-vm.md  tester.md
.github/workflows/: release.yml
agents/: cpo.md  frontender.md
crates/base/: Cargo.toml
crates/base/src/: config.rs  lib.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: config.rs  lib.rs  types.rs
crates/data-transfer/: Cargo.toml
crates/data-transfer/src/: error.rs  handlers.rs  lib.rs
crates/db/: Cargo.toml
crates/db/src/: lib.rs  password.rs
crates/db/src/repo/: analyses.rs  doctor_visits.rs  exercises.rs  feature_settings.rs  material_comments.rs  material_links.rs  material_topics.rs  materials.rs  medical_images.rs  memos.rs  mod.rs  notes.rs  profiles.rs  project_task_links.rs  project_tasks.rs  projects.rs  roadmap_nodes.rs  specialties.rs  tags.rs  tasks.rs  thought_comments.rs  thought_tags.rs  thoughts.rs  topic_tags.rs  topics.rs  users.rs  workouts.rs
crates/dev/: Cargo.toml
crates/dev/src/: main.rs
crates/learning/: Cargo.toml
crates/learning/src/: error.rs  handlers.rs  lib.rs  thumbnail.rs
crates/medical/: Cargo.toml
crates/medical/src/: error.rs  handlers.rs  lib.rs
crates/migration/src/: lib.rs  m20260311_000001_create_users.rs  m20260311_000002_create_notes.rs  m20260311_000003_create_tasks.rs  m20260312_000004_create_workouts.rs  m20260312_000005_create_user_profiles.rs  m20260312_000006_create_thoughts.rs  m20260313_000007_tags_unique_name.rs  m20260313_000008_create_learning.rs  m20260315_000009_add_materials_is_done.rs  m20260319_000010_add_encryption_prefs.rs  m20260319_000011_encryption_settings_refactor.rs  m20260320_000012_add_ui_settings.rs  m20260320_000013_add_muscle_group.rs  m20260321_000014_create_roadmap_nodes.rs  m20260323_000015_create_medical.rs  m20260326_000016_medical_images.rs  m20260326_000017_material_comments_status.rs  m20260326_000018_create_projects.rs  m20260327_000019_drop_thought_title.rs  m20260327_000020_drop_legacy_medical_image_paths.rs  m20260327_000021_topic_tree.rs  m20260327_000022_drop_roadmap_nodes.rs  m20260407_000023_material_comment_attachments.rs  m20260410_000024_create_feature_settings.rs
crates/notes/: Cargo.toml
crates/notes/src/: error.rs  handlers.rs  lib.rs
crates/profile/: Cargo.toml
crates/profile/src/: error.rs  handlers.rs  lib.rs
crates/projects/: Cargo.toml
crates/projects/src/: error.rs  handlers.rs  lib.rs
crates/server/: Cargo.toml  build.rs
crates/server/src/: app_state.rs  error.rs  main.rs
crates/server/src/auth/: handlers.rs  jwt.rs  middleware.rs  mod.rs  password.rs  rate_limit.rs
crates/server/src/routes/: health.rs  mod.rs  notes.rs  spa.rs
crates/tasks/: Cargo.toml
crates/tasks/src/: error.rs  handlers.rs  lib.rs
crates/thoughts/: Cargo.toml
crates/thoughts/src/: error.rs  handlers.rs  lib.rs
crates/workouts/: Cargo.toml
crates/workouts/src/: error.rs  handlers.rs  lib.rs
docs/: architecture.md  deployment.md  local-dev.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.tsx  crypto.ts  index.css  main.tsx
frontend/src/api/: auth.ts  client.ts  data-transfer.ts  learning.ts  medical.ts  notes.ts  profile.ts  projects.ts  tasks.ts  thoughts.ts  workouts.ts
frontend/src/components/: AnalysesList.tsx  AnalysisDetail.tsx  CalendarMonthView.tsx  CalendarWeekView.tsx  CalendarYearView.tsx  ExerciseCatalog.tsx  IconBar.tsx  MaterialCard.tsx  MaterialDetail.tsx  MaterialForm.tsx  MaterialTable.tsx  MemoListEditor.tsx  MuscleRecoveryWidget.tsx  NoteEditor.tsx  ProjectTaskDetail.tsx  ProjectTaskList.tsx  RoadmapCanvas.tsx  Sidebar.tsx  SpecialtySidebar.tsx  TagsCatalog.tsx  TaskCard.tsx  TaskModal.tsx  ThoughtCommentsSidebar.tsx  ThoughtEditor.tsx  ThoughtSidebar.tsx  TopicModal.tsx  TopicSidebar.tsx  UniversalListItem.tsx  VisitDetail.tsx  VisitList.tsx  WorkoutForm.tsx  WorkoutSidebar.tsx
frontend/src/components/ui/: AppButton.tsx  AppIcon.tsx  icons.tsx
frontend/src/features/: CalendarFeature.tsx  DashboardFeature.tsx  LearningFeature.tsx  MedicalFeature.tsx  NotesFeature.tsx  ProjectsFeature.tsx  SettingsFeature.tsx  ThoughtsFeature.tsx  WorkoutsFeature.tsx
frontend/src/hooks/: useAuthFileUrl.ts  useAuthImage.ts  useAuthImages.ts  useEncryption.ts
frontend/src/i18n/: en.json  i18n.ts  ru.json
frontend/src/pages/: LoginPage.tsx
infra/: Dockerfile  Dockerfile.build  configuration.example.toml  docker-compose.prod.yml  docker-compose.yml  entrypoint.sh  nginx.conf
packaging/arch/: PKGBUILD
packaging/scripts/: postinst  prerm
packaging/systemd/: effecty.service
