[workspace]
resolver = "2"
members = [
    "crates/base",
    "crates/cli",
    "crates/server",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://gitlab.com/shifu.corp/effecty/effecty.org"

[workspace.dependencies]
base = { path = "crates/base" }
anyhow = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
axum = "0.8"
tower-http = { version = "0.6", features = ["trace", "cors"] }
