[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/db",
    "crates/cli",
    "crates/server",
    "crates/migration",
    "crates/notes",
    "crates/tasks",
    "crates/workouts",
    "crates/profile",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://gitlab.com/shifu.corp/effecty/effecty.org"

[workspace.dependencies]
effecty-core = { path = "crates/core", package = "core" }
db = { path = "crates/db" }
migration = { path = "crates/migration" }
notes = { path = "crates/notes" }
tasks = { path = "crates/tasks" }
workouts = { path = "crates/workouts" }
profile = { path = "crates/profile" }
sea-orm-migration = { version = "1", features = ["sqlx-postgres", "runtime-tokio-rustls"] }
anyhow = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
axum = "0.8"
tower-http = { version = "0.6", features = ["trace", "cors", "fs"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "chrono", "uuid"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
argon2 = "0.5"
jsonwebtoken = "9"
thiserror = "2"
utoipa = { version = "5", features = ["axum_extras", "chrono", "uuid"] }
utoipa-axum = "0.2"
utoipa-swagger-ui = { version = "9", features = ["axum"] }
