[package]
name = "cli"
version.workspace = true
edition.workspace = true
description = "effecty CLI — user management and deployment"
license = "GPL-2.0"

[[bin]]
name = "effecty-cli"
path = "src/main.rs"

[dependencies]
effecty-core.workspace = true
db.workspace = true
anyhow.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[target.'cfg(unix)'.dependencies]
libc = "0.2"
