[package]
name = "learning"
version.workspace = true
edition.workspace = true

[dependencies]
effecty-core.workspace = true
db.workspace = true
anyhow.workspace = true
axum = { workspace = true, features = ["multipart"] }
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
tracing.workspace = true
thiserror.workspace = true
uuid.workspace = true
tokio.workspace = true
reqwest = { version = "0.12", features = ["rustls-tls"], default-features = false }
scraper = "0.22"
image = "0.25"
