[package]
name = "notes"
version.workspace = true
edition.workspace = true

[dependencies]
effecty-core.workspace = true
db.workspace = true
anyhow.workspace = true
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
tracing.workspace = true
thiserror.workspace = true
