[package]
name = "server"
version.workspace = true
edition.workspace = true

[dependencies]
base.workspace = true
anyhow.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
axum.workspace = true
tower-http.workspace = true
